--- a/index.html
+++ b/index.html
@@ -14,11 +14,34 @@
         <!-- Menu do site -->
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Sobre</li>
-                <li>Portifólio</li>
-                <li>Contato</li>
-                <li>Currículo</li>
+                <li>
+                    <a href="#">
+                        Home
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        Sobre
+                    </a>
+                </li>
+                <li>   
+                    <a href="#">
+                        Portifólio
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        Contato
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="btn btn-laranja">
+                        Currículo
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- End menu do site -->
