refatorando o codigo e reaproveitando o css com container e row

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <img src="assets/images/logo.png" alt="Logo da Empresa XTO"/>
+    <header class="container">
+      
 
-        <!-- Menu do site -->
+       <section class="row">
+          <img src="assets/images/logo.png" alt="Logo da Empresa XTO"/>
+         <!-- Menu do site -->
         <nav>
             <ul>
                 <li>
@@ -45,14 +47,15 @@
             </ul>
         </nav>
         <!-- End menu do site -->
+       </section>
 
     </header>
      <!-- End header -->
 
      <!-- Container -->
-     <main>
+     <main class="container">
         <!-- Section conteúdo do site -->
-        <section>
+        <section class="row">
             <!-- Conteúdo de texto sobre o site -->
             <article>
             <h1>Web Desing</h1>
