--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      <!-- Container -->
      <main class="container">
         <!-- Section conteúdo do site -->
-        <section class="row">
+        <section class="row sobre-web-desing">
             <!-- Conteúdo de texto sobre o site -->
             <article>
             <h1>Web Desing</h1>
@@ -66,7 +66,7 @@
                when an unknown printer took a galley of type and scrambled it to make a type 
                specimen book.</p>
 
-            <a href="#"> Saíba Mais</a>
+            <a href="#" class="btn btn-laranja"> Saíba Mais</a>
             </article>
             <!-- End conteúdo de texto sobre o site -->
             <figcaption>
