footer concluído, responsivo do background

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       <!-- End container -->
      
       <!--- Footer do site (roda pé) -->
-      <footer>
+      <footer class="container">
          <!--- Agrupamento das redes sociais -->
-        <ul>
+        <ul class="row">
 
             <li>
                 <a href="#">
